// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellComponent should render Loading component if cell details is null 1`] = `
<div
  id="authenticatedCellComponentRoot"
  onClick={[Function]}
  role="presentation"
>
  <WithStyles(LayoutComponent)>
    <WithStyles(LoadingComponent) />
  </WithStyles(LayoutComponent)>
</div>
`;

exports[`CellComponent should render if cell details is not null 1`] = `
<div
  id="authenticatedCellComponentRoot"
  onClick={[Function]}
  role="presentation"
>
  <WithStyles(LayoutComponent)>
    <WithStyles(HeaderComponent)
      cellDetails={Object {}}
      isAuthenticated={false}
      onLogout={[Function]}
    />
    <div
      className="body"
    >
      <Switch>
        <Route
          component={[Function]}
          exact={true}
        />
        <Route
          component={[Function]}
          exact={true}
          path="undefined/cell-check"
        />
        <Route
          component={[Function]}
          exact={true}
          path="undefined/meal"
        />
        <Route
          component={[Function]}
          exact={true}
          path="undefined/medication"
        />
        <Route
          component={[Function]}
          exact={true}
          path="undefined/cell-history-report"
        />
      </Switch>
    </div>
    <Connect(CellHistoryReportModalComponent)
      cellDetails={Object {}}
    />
  </WithStyles(LayoutComponent)>
</div>
`;
